更新商品编辑代码
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@6752 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/Static/1.2/css/details.css
+++ b/Static/1.2/css/details.css
@@ -162,6 +162,18 @@ label{
     font-weight: normal;
     vertical-align: middle;
 }
+.mj-list1{
+    margin-left: 100px;
+}
+.mj-seCl{
+    margin-top: 10px;
+}
+.mj-seCl li{
+    margin-bottom: 10px;
+}
+.mj-seCl li select{
+    width: 50px!important;
+}
 .mj-lefts{
     margin-left: 50px;
 }
