--- a/App/View/user/user.add.html
+++ b/App/View/user/user.add.html
@@ -1,4 +1,15 @@
-<? require(ViewDir.'/header.html'); ?>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>商标交易管理系统</title>
+    <link href="<?=StaticDir?>css/style.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="<?=StaticDir?>js/jquery.min.js"></script>
+    <script type="text/javascript" src="<?=StaticDir?>js/jquery.form.js"></script>
+    <script type="text/javascript" src="<?=StaticDir?>js/layer/layer.js"></script>
+</head>
+<body>
+
 <script type="text/javascript" src="<?=StaticDir?>js/layer/layer.js"></script>
 <style type="text/css">
     body{width:400px;min-width:400px}
