--- a/Static/1.2/css/blacklist.css
+++ b/Static/1.2/css/blacklist.css
@@ -185,3 +185,28 @@ label{
     background: url(../images/mj-icon23.png) no-repeat;
     cursor: pointer;
 }
+
+/*Ìí¼ÓºÚÃûµ¥*/
+.mj-blackM{
+    display: none;
+    position: relative;
+    width: 500px;
+    padding: 30px;
+    background: #fff;
+}
+.mj-blackM h5{
+    text-align: center;
+    font-size: 16px;
+    color: #444;
+}
+.mj-blackM p{
+    margin: 20px 0;
+    line-height: 25px;
+    font-size: 12px;
+    color: #666;
+}
+.mj-blackM textarea{
+    width: 430px;
+    height: 150px;
+    outline: none;
+}
