--- a/App/View/index/index.top.html
+++ b/App/View/index/index.top.html
@@ -59,7 +59,7 @@ function logout()
 </head>
 <body style="background:url(<?=StaticDir?>images/topbg.gif) repeat-x;">
     <div class="topleft">
-        <a href="javascript:;"><img src="<?=StaticDir?>images/logo.png" title="系统首页" /></a>
+        <a href="/index/right/" target="rightFrame"><img src="<?=StaticDir?>images/logo.png" title="系统首页" /></a>
     </div>   
     <div class="topright">    
         <ul >
