--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -23,7 +23,7 @@
             <?if(!$isBlack){?>
                 <?if($sale['status']==1){?>
                 <a href="javascript:;" class="btn-warning" onclick="doUpDown('down', <?=$sale['id']?>);">下架</a>
-                <?}elseif($sale['status']==2){?>
+                <?}else{?>
                 <a href="javascript:;" class="btn-success" onclick="doUpDown('up', <?=$sale['id']?>);">上架</a>
                 <?}?>
             <?}?>
@@ -98,9 +98,14 @@
                 <td><?=$vl['advisor'].'-'.$vl['department']?></td>
                 <td><em class="blue"><?if($vl['isVerify']==1){?>已审核<?}else{?>未审核<?}?></em></td>
                 <td>
-                    <a href="">删除</a>
+                <?if ( $vl['isVerify'] == 1) {?>
+                    <a href="javascript:void(0);" onclick="delContact(<?=$sale['id']?>, <?=$vl['id']?>, <?=count($sale['contact'])?>);">删除</a>
                     <a href="javascript:void(0);" onclick="setContact(<?=$sale['id']?>, <?=$vl['id']?>);">编辑</a>
-                    <a href="">生成报价</a>
+                    <!-- <a href="">生成报价</a> -->
+                <?}else{?>
+                    <a href="javascript:void(0);" onclick="setVerify(<?=$sale['id']?>, <?=$vl['id']?>);">通过</a>
+                    <a href="javascript:void(0);" onclick="delVerify(<?=$sale['id']?>, <?=$vl['id']?>, <?=count($sale['contact'])?>);">驳回</a>
+                <?}?>
                 </td>
             </tr>
     <?}?>
@@ -233,8 +238,7 @@
                 </div>
                 <? } ?>
                 </dd>
-                <dd><label>价值分析：</label><textarea name="value" placeholder="请用一句话表达，限100个汉字内">
-                <?=$sale['tminfo']['value']?></textarea></dd>
+                <dd><label>价值分析：</label><textarea name="value" placeholder="请用一句话表达，限100个汉字内" style="width:80%;height:40px;"><?=$sale['tminfo']['value']?></textarea></dd>
                 <dd >
                     <input type="hidden" name="bzpic" class="bzpic" value="<?=$sale['tminfo']['embellish']?>" />
                     <input type="hidden" name="tjpic" class="tjpic" value="<?=$sale['tminfo']['indexPic']?>" />
@@ -247,9 +251,8 @@
                         <input type="file" id="tjfile" name="fileName" style="display: inline-block;"/>
                     </div>
                 </dd>
-                <dd><label>商标介绍：</label><textarea name="intro" id="intro" style="width:80%;">
-                    <?=$sale['tminfo']['intro']?>
-                </textarea></dd>
+                <dd><label>商标介绍：</label>
+                <textarea name="intro" id="intro" style="width:80%;height:150px;"><?=$sale['tminfo']['intro']?></textarea></dd>
                 <dd>
                     <label>展示电话：</label>
                     <select name="viewPhone" id="viewPhone">
@@ -267,7 +270,7 @@
         <div class="mj-becen">
             <p>备注</p>
             <div class="mj-sr">
-                <textarea id="memo"><?=$sale['memo']?></textarea>
+                <textarea id="memo" style="width:80%;height:80px;"><?=$sale['memo']?></textarea>
             </div>
         </div>
     </div>
@@ -292,6 +295,8 @@
     </table>
 </div>
 
+<script type="text/javascript" src="<?=StaticDir?>1.2/js/internal/updown.js"></script>
+<script type="text/javascript" src="<?=StaticDir?>1.2/js/internal/saleEdit.js"></script>
 
 <script type="text/javascript">
     $(function(){
@@ -361,321 +366,7 @@
             });
         });
     });
-    function setBzxx()
-    {
-        var saleId  = $("#saleId").val();
-        var data    = $("#bzxxForm").serialize();
-        $.ajax({
-            type : 'post',
-            url  : '/internal/setEmbellish/',
-            data : data+'&saleId='+saleId,
-            dataType : 'json',
-            success : function (data){
-                if (data.code==1){
-                    layer.msg('操作成功！', {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    }, function(){
-                        window.location.reload();
-                    });
-                }else{
-                    layer.msg('操作失败，请重试。', {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    });
-                }
-            },
-            error : function (data){
-                layer.msg('操作失败，请稍后重试。', {
-                    time: 2000 //2秒关闭（如果不配置，默认是3秒）
-                });
-            }
-        });
-    }
-    function setPrice()
-    {
-        var isSale      = $("#isSale").is(':checked');
-        var isLicense   = $("#isLicense").is(':checked');
-        var isOffprice  = $("#isOffprice").is(':checked');
-        var saleId      = $("#saleId").val();
-        if ( !isSale && !isLicense ){
-            layer.msg('至少选择 出售与许可 中一项');
-            return false;
-        }
-        if ( isSale ){
-            var type = $("#priceType").children('option:selected').val();
-            if ( type == 1 ){//定价
-                if ( $("#price").val() <= 0 ){//必须输入销售价格
-                    layer.msg('请输入销售价格');
-                    return false;
-                }
-                if ( isOffprice ){//选择特价
-                    if ( $("#salePrice").val() <= 0  ){
-                        layer.msg('请输入特价价格');
-                        return false;
-                    }
-                    var radio = $('input:radio[name="priceDate"]:checked').val();
-                    if ( radio == null ){
-                        layer.msg('请选择一种特价方式');
-                        return false;
-                    }else if ( radio == 1 && $("#salePriceDate").val() == '' ){
-                        layer.msg('请选择特价限时时间');
-                        return false;
-                    }
-                }
-            }
-        }
-        var data = $("#priceForm").serialize();
-        $.ajax({
-            type : 'post',
-            url  : '/internal/setPrice/',
-            data : data+'&saleId='+saleId,
-            dataType : 'json',
-            success : function (data){
-                if (data.code==1){
-                    layer.msg('操作成功！', {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    }, function(){
-                        window.location.reload();
-                    });
-                }else{
-                    layer.msg('操作失败，请重试。', {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    });
-                }
-            },
-            error : function (data){
-                layer.msg('操作失败，请稍后重试。', {
-                    time: 2000 //2秒关闭（如果不配置，默认是3秒）
-                });
-            }
-        });
-    }
-    function setMemo()
-    {
-        var saleId  = $("#saleId").val();
-        var memo    = $("#memo").val();
-        if ( $.trim(memo) == '' ){
-            layer.msg('请输入备注信息');
-            return false;
-        }
-        $.ajax({
-            type : 'post',
-            url  : '/internal/setMemo/',
-            data : {'saleId':saleId, 'memo':memo},
-            dataType : 'json',
-            success : function (data){
-                if (data.code==1){
-                    layer.msg('操作成功！', {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    }, function(){
-                        window.location.reload();
-                    });
-                }else{
-                    layer.msg('操作失败，请重试。', {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    });
-                }
-            },
-            error : function (data){
-                layer.msg('操作失败，请稍后重试。', {
-                    time: 2000 //2秒关闭（如果不配置，默认是3秒）
-                });
-            }
-        });
-    }
-    function setContact(saleId, cId)
-    {
-        if ( saleId <= 0 || saleId == '' ) return false;
-        var url = '?saleId='+saleId+'&cId='+cId;
-        layer.open({
-            type: 2,
-            title: false,
-            closeBtn: false,
-            area: ['501px', '485px'],
-
-            content: '/internal/contact/'+url,
-        });
-    }
-    function outBlack(id, number)
-    {
-        if ( $.trim(number) == '' || $.trim(id) == '' ){
-            layer.msg('操作失败，请重试。', {
-                time: 1000 //2秒关闭（如果不配置，默认是3秒）
-            });
-            return false;
-        }
-        layer.confirm('确认要从黑名单中删除？', {
-            btn: ['对滴','算了'] //按钮
-        }, function(){
-            $.ajax({
-                type : 'post',
-                url  : '/internal/outBlack/',
-                data : {'id':id,'number':number},
-                dataType : 'json',
-                success : function (data){
-                    if (data.code==1){
-                        layer.msg('操作成功！', {
-                            time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                        }, function(){
-                            window.location.reload();
-                        });
-                    }else{
-                        layer.msg('操作失败，请重试。', {
-                            time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                        });
-                    }
-                },
-                error : function (data){
-                    layer.msg('操作失败，请稍后重试。', {
-                        time: 2000 //2秒关闭（如果不配置，默认是3秒）
-                    });
-                }
-            });
-        });
-    }
-    function setBlack(id, number)
-    {
-        if ( $.trim(number) == '' || $.trim(id) == '' ){
-            layer.msg('操作失败，请重试。', {
-                time: 1000 //2秒关闭（如果不配置，默认是3秒）
-            });
-            return false;
-        }
-        layer.confirm('注意：如商品在销售中，会自动下架商品！！！', {
-            btn: ['要得','算了'] //按钮
-        }, function(){
-            layer.prompt({
-                formType: 2,
-                value: '',
-                maxlength: 100,
-                title: '请输入添加黑名单的原因'
-            }, function(value, index, elem){
-                if ( $.trim(value) == ''){
-                    layer.tips('请输入添加黑名单的原因',elem);
-                    return false;
-                }else{
-                    _setBlack(id, number, value);
-                }
-            });
-        });
-        
-
-    }
-    function _setBlack(id, number, reason)
-    {
-        $.ajax({
-            type : 'post',
-            url  : '/internal/setBlack/',
-            data : {'id':id,'number':number,'reason':reason},
-            dataType : 'json',
-            success : function (data){
-                if (data.code==1){
-                    layer.msg('操作成功！', {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    }, function(){
-                        window.location.reload();
-                    });
-                }else{
-                    layer.msg('操作失败，请重试。', {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    });
-                }
-            },
-            error : function (data){
-                layer.msg('操作失败，请稍后重试。', {
-                    time: 2000 //2秒关闭（如果不配置，默认是3秒）
-                });
-            }
-        });
-    }
-
-    function doUpDown(status, id)
-    {
-        if(status != 'up' && status != 'down'){
-            return false;
-        }
-        if ( status == 'down' ){
-            layer.prompt({
-                formType: 2,
-                value: '',
-                maxlength: 100,
-                title: '请输入下架原因'
-            }, function(value, index, elem){
-                if ( $.trim(value) == ''){
-                    layer.tips('请输入下架原因',elem);
-                    return false;
-                }else{
-                    _doDown(id, value);
-                }
-            });
-        }else if (  status == 'up' ){
-            layer.confirm('确认要上架吗？请确认相关数据已审核成功！', {
-                btn: ['确认','取消'] //按钮
-            }, function(){
-                _doUp(id);
-            });
-        }else{
-            return false;
-        }
-    }
-    function _doDown(id, reason)
-    {
-        $.ajax({
-            type : 'post',
-            url  : '/internal/doDown/',
-            data : {'id':id,'reason':reason},
-            dataType : 'json',
-            success : function (data){
-                if (data.code==1){
-                    layer.msg('操作成功！', {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    }, function(){
-                        window.location.reload();
-                    });
-                }else{
-                    layer.msg('操作失败，请重试。', {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    }, function(){
-                        doUpDown('down', id);
-                    });
-                }
-            },
-            error : function (data){
-                layer.msg('操作失败，请稍后重试。', {
-                    time: 2000 //2秒关闭（如果不配置，默认是3秒）
-                });
-            }
-        });
-    }
-    function _doUp(id)
-    {
-        $.ajax({
-            type : 'post',
-            url  : '/internal/doUp/',
-            data : {'id':id},
-            dataType : 'json',
-            success : function (data){
-                if (data.code==1){
-                    layer.msg('操作成功！', {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    }, function(){
-                        window.location.reload();
-                    });
-                }else{
-                    layer.msg('操作失败，请重试。', {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                    }, function(){
-                        doUpDown('up', id);
-                    });
-                }
-            },
-            error : function (data){
-                layer.msg('操作失败，请稍后重试。', {
-                    time: 2000 //2秒关闭（如果不配置，默认是3秒）
-                });
-            }
-        });
-    }
-
+    
 </script>
 
 <? require(ViewDir.'/footer.html'); ?>
