优化查询筛选
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@6915 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -93,6 +93,10 @@
                     <label for="rad<?=$k?>"><?=$v[2]?></label>
                 </div>
                 <? } ?>
+                <div class="mj-radio">
+                    <input type="radio" id="rad0" <?if($s['tmPrice'] == 0){echo 'checked';} ?> value="0" name="tmPrice"/>
+                    <label for="rad0>">所有</label>
+                </div>
             </dd>
             <dd>
                 <label>商标标签：</label>
