提交 联系电话 管理功能。优化部分代码。
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@6980 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -19,7 +19,7 @@
         <form name="saleSearchForm" id="saleSearchForm" action="/internal/index/" method="GET">
         <dl>
             <dt><span>商标分类：<button class="btn" type="button">全部分类</button></span></dt>
-            <dd class="mj-ddList">
+            <dd class="mj-ddList" <?if(empty($s['tmClass'])){echo 'style="display:none"';}?> >
                 <ul class="f-clearfix">
                 <input type="hidden" id="tmClass" name="tmClass" value="<?=$s['tmClass']?>">
                 <? foreach ($tmClass as $k => $v) {?>
