提交 商品编辑 包装信息中，联系电话号码功能。保证与联系电话列表相同。
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@6981 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -252,9 +252,10 @@
                 <dd>
                     <label>展示电话：</label>
                     <select name="viewPhone" id="viewPhone">
-                        <option>13412121451</option>
-                        <option>13412121451</option>
-                        <option>13412121451</option>
+                    <?if($sale['viewPhone']==0 || !in_array($sale['viewPhone'], $allphone)){?> <option value="0" selected>请选择号码</option><?}?>
+                    <? foreach ($allphone as $phone) { ?>
+                        <option value="<?=$phone?>" <?if($sale['viewPhone']==$phone){echo 'selected';}?>><?=$phone?></option>
+                    <? } ?>
                     </select>
                 </dd>
     </form>
