--- a/App/View/index/index.right.html
+++ b/App/View/index/index.right.html
@@ -16,16 +16,23 @@
     <div class="mainindex">
     <div class="welinfo">
     <span><img src="<?=StaticDir?>images/sun.png" alt="天气" /></span>
-    <b><?=$username?>早上好，欢迎使用信息管理系统</b>
+    <b>欢迎：<?=$username?>&nbsp;&nbsp;<?if(date('H') > 6 && date('H') < 12){echo '早上好';}?>
+    <?if(date('H') > 13 && date('H') < 18){echo '下午好';}?>
+    <?if(date('H') > 18 && date('H') < 24){echo '晚上好';}?>
+    <?if(date('H') > 0 && date('H') < 6){echo '凌晨好';}?>
+    <?if(date('H') > 12 && date('H') < 13){echo '中午好';}?>
+    ，欢迎使用信息管理系统</b>
     </div>   
     <div class="xline"></div>   
     <ul class="iconlist">
-	<li><img src="<?=StaticDir?>images/ico01.png" /><p><a href="#">管理设置</a></p></li>
-    <li><img src="<?=StaticDir?>images/ico02.png" /><p><a href="#">发布文章</a></p></li>
-    <li><img src="<?=StaticDir?>images/ico03.png" /><p><a href="#">数据统计</a></p></li>
-    <li><img src="<?=StaticDir?>images/ico06.png" /><p><a href="#">查询</a></p></li>       
+	<li><a href="/internal/index/?saleStatus=1"><img src="<?=StaticDir?>images/ico01.png" /><p>销售中(<?=$total[1]?>)</p></a></li>
+    <li><a href="/internal/index/?saleStatus=2"><img src="<?=StaticDir?>images/ico02.png" /><p>已下架(<?=$total[2]?>)</p></a></li>
+    <li><a href="/internal/index/?saleStatus=3"><img src="<?=StaticDir?>images/ico03.png" /><p>待审核(<?=$total[3]?>)</p></a></li>
+    <li><a href="/internal"><img src="<?=StaticDir?>images/ico06.png" /><p>商品查询</p></a></li>
+
+    <li><a href="/internal/index/?isVerify=2"><img src="<?=StaticDir?>images/ico04.png" /><p>未审核的联系人(<?=$noverify?>)</p></a></li>       
     </ul>  
-    <div class="ibox"><a class="ibtn"><img src="<?=StaticDir?>images/iadd.png" />添加新的快捷功能</a></div>  
+    <!-- <div class="ibox"><a class="ibtn"><img src="<?=StaticDir?>images/iadd.png" />添加新的快捷功能</a></div>   -->
 	</div>
 </body>
 </html>
