--- a/App/View/index/index.top.html
+++ b/App/View/index/index.top.html
@@ -13,7 +13,7 @@ $(function(){
 		$(this).addClass("selected");
 	})
 
-    setInterval("getRemind()",10000);
+    //setInterval("getRemind()",10000);
 })
 
 function getRemind(){
