--- a/App/View/tempbuy/tempbuy.index.html
+++ b/App/View/tempbuy/tempbuy.index.html
@@ -1,4 +1,14 @@
-<? require(ViewDir.'/header.html'); ?>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>商标交易管理系统</title>
+    <link href="<?=StaticDir?>css/style.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="<?=StaticDir?>js/jquery.min.js"></script>
+    <script type="text/javascript" src="<?=StaticDir?>js/jquery.form.js"></script>
+    <script type="text/javascript" src="<?=StaticDir?>js/layer/layer.js"></script>
+</head>
+<body>
 
 <div class="place">
     <span>位置：</span>
