git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7098 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -218,7 +218,7 @@
                             <?}?>
                             </ul>
                         </div>
-                    <? }else{$ct=current($v['contact']);echo $ct['name']."-".$ct['phone'];} ?>
+                    <? }else{$ct=current($v['contact']);if($ct['isVerify'] == 2){echo '<span class="red">审</span>';}echo $ct['name']."-".$ct['phone'];} ?>
                     </td>
                     <td>10000</td>
                     <td><?if($v['priceType']==2){echo "议价";}else{echo $v['price'];}?></td>
