--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -220,7 +220,9 @@
                         </div>
                     <? }else{$ct=current($v['contact']);if($ct['isVerify'] == 2){echo '<span class="red">审</span>';}echo $ct['name']."-".$ct['phone'];} ?>
                     </td>
-                    <td>10000</td>
+                    <td><?if(count($v['contact']) > 1){echo '多底价';}
+                    else{$ct=current($v['contact']);echo $ct['price'];} ?>
+                    </td>
                     <td><?if($v['priceType']==2){echo "议价";}else{echo $v['price'];}?></td>
                     <td>
                         <span class="icon icon-delete">
