git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7124 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -60,7 +60,7 @@
                 </tr>
                 <tr>
                     <td colspan="4"><?if(mb_strlen($sale['group'],'utf8')>200){?>
-                    <textarea readonly="readonly"  rows="5" cols="120" style="resize: none;">群组：<?=$sale['group']?></textarea><?}else{?>群  组：<br><?=$sale['group']?><?}?></td>
+                    <textarea readonly="readonly"  rows="5" cols="120" style="resize: none;">群组：<?=$sale['group']?></textarea><?}else{?>群  组：<?=$sale['group']?><?}?></td>
                 </tr>
                 </tbody>
             </table>
