联系人添加时bug
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7133 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -89,7 +89,7 @@
     <?foreach ($sale['contact'] as $ky => $vl) { ?>
             <tr>
                 <td><?=$vl['id']?></td>
-                <td><?=date('Y-m-d', $vl['date'])?></td>
+                <td><?if ($vl['date']<=0){echo '---';}else{echo date('Y-m-d', $vl['date']);}?></td>
                 <td><?if($vl['isVerify']==1){?><em class="blue">已审核<?}else{?><em class="red">未审核<?}?></em></td>
                 <td><?=$saleSource[$vl['source']]?></td>
                 <td><?=$vl['name']?></td>
