--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -34,7 +34,7 @@
     <div class="mj-detaImg">
         <div class="mj-deiT">
             <span>商标基本信息</span>
-            <a target="_blank" href="http://g.chaofan.wang/guanjia/Member/tmView?&id=<?=$sale['number']?>&tmclass=<?=substr($sale['class'],0,2)?>">去商标管家查看详细信息）</a>
+            <a target="_blank" href="<?=$gjUrl?>">去商标管家查看详细信息）</a>
         </div>
         <div class="mj-deiB f-clearfix">
             
